<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="@drawable/gradient">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/signup_icon"
        android:src="@drawable/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_username"
        app:layout_constraintTop_toBottomOf="@id/signup_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/login_name"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@id/signup_username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:hint="@string/login_pass"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_pass"
        android:hint="@string/confirm_pass"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_password"
        android:layout_margin="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cellno"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@id/confirm_pass"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:inputType="number"
        android:hint="@string/cellno"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/licence_no"
        app:layout_constraintTop_toBottomOf="@id/cellno"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:inputType="number"
        android:hint="@string/licence_no"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amb_no"
        app:layout_constraintTop_toBottomOf="@id/licence_no"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/amb_no"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup"
        android:background="#0000"
        style="@style/Base.TextAppearance.AppCompat"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintTop_toBottomOf="@id/amb_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signup_btn"
        android:layout_margin="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>